2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* em-folder-view.c: (emfv_setup_view_instance):
	* mail-component.c: (impl_finalize):
	* message-list.c: (ml_tree_value_at):
	Memory leak fix.

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #167638

	* mail-component.c: (impl_quit): Upstreamed Fejj's OpenSUSE patch for
	faster quitting.

2008-02-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bnc #153807

	* em-composer-utils.c: (em_utils_post_to_folder): Patch from OpenSUSE.

2008-02-16  Aidan Delaney  <a.j.delaney@brighton.ac.uk>

	** Fix for bug #516234

	* em-popup.c: (emp_apps_open_in): Removed a stray printf() statement. 

2008-02-15  Paul Bolle  <pebolle@tiscali.nl>

	** Fix for bug #515659

	* em-format-html.c: (em_format_html_set_mark_citations):
	Keep mark_citations and the CAMEL_MIME_FILTER_TOHTML_MARK_CITATION
	flag (part of text_html_flags) in sync.

2008-02-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #515054

	* em-folder-view.c: (emfv_popup_mark_junk), (emfv_popup_mark_nojunk):
	Also clear/set new CAMEL_MESSAGE_NOTJUNK flag.

2008-02-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #411576

	* evolution-mail.schemas.in: Add a key to decide if same fonts gotto
	be used in message list in vertical view column.
	* message-list.c: (create_composite_cell):

2008-02-10  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #510642

	* evolution-mail.schemas.in: Improved a schema-description. 
	* mail-config.glade: Improved an error-message. 

2008-02-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #509741

	* mail-session.c (user_message_exec):
	Use the number of dialog buttons as a heuristic for whether to
	display a message in the status bar or immediately present the
	dialog to the user.

2008-01-29  Matthew Barnes  <mbarnes@redhat.com>

	* mail-send-recv.c:
	Replace G_GNUC_FUNCTION (deprecated) with G_STRFUNC.
