@@ -1,3 +1,10 @@
+2008-02-19  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #516349
+
+	* em-format-quote.c: (emfq_format_message):
+	Do not force black text in quotation part of the message.
+
 2008-02-18  Milan Crha  <mcrha@redhat.com>
 
 	** Part of fix for bug #515744
